# hadalyth-tuber

./: .gitignore  Cargo.toml  README.md  build_all.sh  build_linux.sh  build_only_linux.sh  build_only_windows.sh  build_windows.sh
.cargo/: config.toml
crates/hadalyth_arkit/: Cargo.toml  README.md
crates/hadalyth_arkit/src/: custom_config.rs  custom_events.rs  custom_resources.rs  hadalyth_arkit.rs  hadalyth_arkit_async.rs  hadalyth_arkit_mesh_driver.rs  (+1 more)
crates/hadalyth_ndi/: Cargo.toml  README.md
crates/hadalyth_networking/: Cargo.toml  README.md
crates/hadalyth_twitch/: Cargo.toml  README.md
crates/hadalyth_twitch/src/: custom_config.rs  custom_enums.rs  custom_events.rs  custom_resources.rs  custom_traits.rs  hadalyth_twitch.rs  hadalyth_twitch_async.rs  hadalyth_twitch_enums.rs  hadalyth_twitch_parse_event.rs  hadalyth_twitch_resources.rs  lib.rs
crates/hadalyth_twitch/src/custom_config/: hadalyth_twitch_client_id.rs  hadalyth_twitch_eventsubs.rs  hadalyth_twitch_scopes.rs
crates/hadalyth_twitch/src/custom_enums/: automod_message_status.rs
crates/hadalyth_twitch/src/custom_events/: socket_event.rs  twitch_event.rs
crates/hadalyth_twitch/src/custom_resources/: badge.rs  bits_custom_power_up.rs  broadcaster.rs  charity.rs  chatter.rs  cheermote.rs  currency.rs  emote.rs  fragment.rs  mention.rs  message.rs  moderator.rs  reply.rs  source.rs  timestamp.rs  user.rs
crates/hadalyth_twitch/src/custom_traits/: to_automod_message_status.rs  to_godot_message.rs
crates/hadalyth_twitch/src/resources/: hadalyth_twitch_eventsubs.rs  hadalyth_twitch_scopes.rs
(+12 files in other folders)
