[workspace]
members = ["crates/*"]
resolver = "3"


[workspace.dependencies]
godot = "0.5.0"
tokio = "1.52.3"
tokio-tungstenite = "0.29.0"
futures-util = "0.3.32"
serde = "1.0.228"
serde_json = "1.0.150"
serde_derive = "1.0.228"
reqwest = "0.13.1"
twitch_api = "0.8.0"
twitch_oauth2 = "0.17.1"
grafton-ndi = "0.13.0"
hadalyth-twitch = {path = "./crates/hadalyth_twitch"}
hadalyth-ndi = {path = "./crates/hadalyth_ndi"}


[profile.dev]
lto = "thin"
opt-level = 1 
codegen-units = 256


[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1